--- a/rothman-1982-updated/rothman.tex
+++ b/rothman-1982-updated/rothman.tex
@@ -390,16 +390,18 @@ We see that there are, even at this level, some serious difficulties with the po
 While the reader is forming a rebuttal to this statement, we turn to events according to Hoyle where we find an amusing inversion of Infeld's theory. Hoyle writes:
 
 \begin{quote}
-Such are the bare bones of the story of the life and death of Evariste Galois. The classical biography of Galois [he then references Dupuy], in an attempt to add flesh to these bones, suggests that he was done to death by royalist enemies, as does E.T. Bell in his book Men of Mathematics. There are dark hints that the release from prison was but a device for encompassing his death, a necessary preliminary to his being matched against a highly skilled assailant in royalist pay. But why should Galois feel it critical to his honor that he should accept the challange of a right-wing agent, especially if the agent were a known marksman? Gallic logic suggests on account of a girl...[87]
+Such are the bare bones of the story of the life and death of Evariste Galois. The classical biography of Galois [he then references Dupuy], in an attempt to add flesh to these bones, suggests that he was done to death by royalist enemies, as does E.T. Bell in his book\emph{ Men of Mathematics}. There are dark hints that the release from prison was but a device for encompassing his death, a necessary preliminary to his being matched against a highly skilled assailant in royalist pay. But why should Galois feel it critical to his honor that he should accept the challenge of a right-wing agent, especially if the agent were a known marksman? Gallic logic suggests on account of a girl...[87]
 \end{quote}
 We first note the complete misrepresentation of Dupuy's position. Undeterred, Hoyle then goes on to dispose of the ``infamous coquette'' and propose his own theory:
 
-\begin{quote}
-It is possible that the ``infamous coquette'' was the source of a purely personal quarrel, but it is the normal biological rule among mammals that sexual quarrels between two males cease as soon as one side seeks ``accomodation.'' It is the normal rule that either party to such fights can simply walk away, which is just what Galois seems to have attempted to do. The more likely possibility is that Galois's habit of working mathematical problems in his head, his ability to think in parallel, caused serious animosities, and perhaps suspicions, to develop during his six months of imprisonment. There may have been suspicions that Galois was not wholly for the ``cause,'' or even that he was an agent provocateur..[88]
-\end{quote}
+\begin{quotation}
+It is possible that the ``infamous coquette'' was the source of a purely personal quarrel, but it is the normal biological rule among mammals that sexual quarrels between two males cease as soon as one side seeks ``accomodation.'' It is the normal rule that either party to such fights can simply walk away, which is just what Galois seems to have attempted to do. 
+
+The more likely possibility is that Galois's habit of working mathematical problems in his head, his ability to think in parallel, caused serious animosities, and perhaps suspicions, to develop during his six months of imprisonment. There may have been suspicions that Galois was not wholly for the ``cause,'' or even that he was an {\it agent provocateur}...[88]
+\end{quotation}
 I am divided between anger and hilarity. To suggest as Hoyle does that any republican in Paris suspected Galois after his expulsion from l'Ecole Normale, his Artillery activities, his threat to the King, his arrests, trials, sentencings, resentencings and prison activities borders on the fantastical. This is in addition to the fact that two or three thousand republicans later attended the funeral of this supposed agent provocateur. One might equally well claim Lenin had been suspected of being a Menshevik.
 
-As to Hoyle's bio-sociological theories, he is contradicted by the (circumstantial) historical record. The greatest Russian poet, Aleksandr Pushkin, was killed in 1837 at the age of 37 in a duel over his wife. England's Lord Camelford was killed in a duel over a prostitute. As late as 1838 members of the American legislature were engaging in similar duels. Toward the end of the eighteenth century, during election season, approximately 23 duels \emph{per day }were fought in Ireland alone, unlikely just for political reasons. In the last decades of the nineteeth century, Paris newspapers carried notices of daily duels and their terms. These practices continued until World War I. The causes of such ``affairs of honor'' ranged from geese, to insults, to politics, to women [89]. Dupuy himself mentions that nothing was more common at the time in question than duels between republicans, and I think one can safely infer from his remarks that no one paid the slightest attention to them [90].
+As to Hoyle's bio-sociological theories, he is contradicted by the (circumstantial) historical record. The greatest Russian poet, Aleksandr Pushkin, was killed in 1837 at the age of 37 in a duel over his wife. England's Lord Camelford was killed in a duel over a prostitute. As late as 1838 members of the American legislature were engaging in similar duels. Toward the end of the eighteenth century, during election season, approximately 23 duels \emph{per day }were fought in Ireland {\it alone}, unlikely just for political reasons. In the last decades of the nineteeth century, Paris newspapers carried notices of daily duels and their terms. These practices continued until World War I. The causes of such ``affairs of honor'' ranged from geese, to insults, to politics, to women [89]. Dupuy himself mentions that nothing was more common at the time in question than duels between republicans, and I think one can safely infer from his remarks that no one paid the slightest attention to them [90].
 
 But this rebuttal is as circumstantial as Hoyle's argument and not very satisfactory so let us again rise to more concrete facts. The first of these is the existence of two fragmentary letters written to Galois by one Mademoiselle Stephanie D., who is none other than the ``infamous coquette'' over whom the duel was fought. A prostitute? An agent provocateur? Most authors have assumed her identity to be an absolute mystery and that she, like Galois's opponent, is an anyonymous casualty of history. Dupuy was apparently unaware of the letters or chose not to publish them. Bell and Hoyle never mention her name. Infeld calls her Eve Sorel (perhaps inspried by Stendhal). This is a strange state of affairs, for the letters are contained in Tannery's 1908 edition of Galois's papers. Tannery does not affix a name to the author of these fragments; it is left for the 1962 edition of Bourgne and Azra to attempt an identification. One can understand why Bell and Infeld did not mention her name since Tannery did not provide it. Hoyle does not have such an excuse, his book being published in 1977. One cannot understand why these letters are never mentioned by anyone, especially by Bell and Infeld who cite Tannery as a major source for Galois's manuscripts.
 
@@ -425,9 +427,8 @@ From Stephanie's second letter it is not difficult to infer that Galois took som
 Unfortunately, the establishment of Stephanie's identity does not conclusively establish exactly what happened. But for those who still insist that agents provocateurs and right-wing assassins are not absolutely ruled out, I offer the following passage from Andre Dalmas's biography of Galois in which he reprints an article from the June 4, 1832 issue of the Lyon ``journal constitutionnel'' le Precurseur [93]:
 
 \begin{quote}
-Paris, 1 June--A deplorable duel yesterday has deprived the exact sciences of a young man who gave the highest expectations, but whose celebrated precocity was lately overshadowed by his political activities. The young Evariste Galois, condemned for a year as a result of a toast proposed at a banquet at the Vendanges des Bourgogne was fighting with one of his old friends, a young man like himself, like himself a member of the Society of Friends of the People, and who was known to have figured equally in a political trial. It is said that love was the cause of the combat. The pistol was the chosen weapon of the adversaries, but because of their old friendship they could not bear to look at one another and left the decision to blind fate. At point-blank range they were each armed with a pistol and fired. Only one pistol was charged. Galois was pierced through and through by a ball from his opponent; he was taken to the hospital Cochin where he died in about two hours. His age was 22. L.D., his adversary, is a bit younger.
+Paris, 1 June--A deplorable duel yesterday has deprived the exact sciences of a young man who gave the highest expectations, but whose celebrated precocity was lately overshadowed by his political activities. The young Evariste Galois, condemned for a year as a result of a toast proposed at a banquet at the {\it Vendanges des Bourgogne} was fighting with one of his old friends, a young man like himself, like himself a member of the Society of Friends of the People, and who was known to have figured equally in a political trial. It is said that love was the cause of the combat. The pistol was the chosen weapon of the adversaries, but because of their old friendship they could not bear to look at one another and left the decision to blind fate. At point-blank range they were each armed with a pistol and fired. Only one pistol was charged. Galois was pierced through and through by a ball from his opponent; he was taken to the hospital Cochin where he died in about two hours. His age was 22. L.D., his adversary, is a bit younger.
 \end{quote}
-
 It is frustrating that a report written only several days after the event is incorrect on the date of the duel, the date of Galois's death and his age; this in itself should serve as a good lesson to armchair historians. And L.D.? The frustrations do not end. The man who fits the above description most accurately is not d'Herbinville at all but Galois's old friend Duchatelet who was arrested with him on Bastille Day. On the other hand, Bourgne and Azra give Duchatelet's first name as Ernest and d'Herbinville's surname also begins with a D, bearing in mind the variable orthographic procedures of the time (e.g., du Motel vs. Dumotel), not to mention the fact that he also participated in a political trial (though not with Galois). While I cast my vote for Duchatelet, the final distinction strikes me as unimportant. With Stephanie's letters and the newspaper article we arrive at a very consistent and believable picture of two old friends falling in love with the same girl and deciding the outcome by a gruesome version of Russian roulette. This is my fairy tale. It has the virtues of simplicity and psychological truth. By comparison the tales of Bell, Hoyle and Infeld are baroque, if not byzantine, inventions. Those who want to puruse the matter further are welcome to do so. I suggest a trip to Paris to check whether Duchatelet was boarding at the Sieur Faultrier during April 1832.
 
 \section{The Last Night}
